# ChangeLog for x11-misc/shared-mime-info
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/shared-mime-info/ChangeLog,v 1.152 2009/07/23 22:51:53 eva Exp $

  23 Jul 2009; Gilles Dartiguelongue <eva@gentoo.org>
  -shared-mime-info-0.51.ebuild:
  Clean up old revisions.

  28 Jun 2009; Brent Baude <ranger@gentoo.org> shared-mime-info-0.60.ebuild:
  Marking shared-mime-info-0.60 ppc64 for bug 272515

  16 Jun 2009; Raúl Porcel <armin76@gentoo.org>
  shared-mime-info-0.60.ebuild:
  arm/ia64/s390/sh/sparc stable wrt #272515

  08 Jun 2009; Jeroen Roovers <jer@gentoo.org> shared-mime-info-0.60.ebuild:
  Stable for HPPA (bug #272515).

  07 Jun 2009; Tobias Klausmann <klausman@gentoo.org>
  shared-mime-info-0.60.ebuild:
  Stable on alpha, bug #272515

  07 Jun 2009; Markus Meier <maekke@gentoo.org>
  shared-mime-info-0.60.ebuild:
  amd64/x86 stable, bug #272515

  06 Jun 2009; nixnut <nixnut@gentoo.org> shared-mime-info-0.60.ebuild:
  ppc stable #272515

  19 Apr 2009; Mart Raudsepp <leio@gentoo.org> shared-mime-info-0.60.ebuild:
  No need to depend on so high glib version - GIO tests are not ran from
  tarballs per Makefile.am

  08 Mar 2009; Gilles Dartiguelongue <eva@gentoo.org>
  shared-mime-info-0.60.ebuild:
  Update intltool dependency since intltool-*.in are not provided.

*shared-mime-info-0.60 (07 Mar 2009)

  07 Mar 2009; Gilles Dartiguelongue <eva@gentoo.org>
  +files/shared-mime-info-0.60-parallel-make.patch,
  -shared-mime-info-0.23.ebuild, -shared-mime-info-0.30.ebuild,
  -shared-mime-info-0.40.ebuild, +shared-mime-info-0.60.ebuild:
  Bump to 0.60, closes #261183. Clean up old revisions.

  06 Mar 2009; Jeroen Roovers <jer@gentoo.org> shared-mime-info-0.51.ebuild:
  Stable for HPPA (bug #256718).

  27 Feb 2009; Brent Baude <ranger@gentoo.org> shared-mime-info-0.51.ebuild:
  stable ppc64, bug 256718

  25 Feb 2009; Thomas Anderson <gentoofan23@gentoo.org>
  shared-mime-info-0.51.ebuild: