@@ -1,7 +1,7 @@
 AUX shared-mime-info-0.60-parallel-make.patch 418 RMD160 e329a8abff7e730a5aba4582ff2a3e1d6f2b4112 SHA1 42542aeff7c5ac0efab1304fbf2c58da4a680ead SHA256 e0f07fa76db6fb4adaae295b15c089a6a0c290e46678160b687fd8d64f13fa0e
-DIST shared-mime-info-0.51.tar.bz2 445565 RMD160 9e0281f3bd9ac44af60833ec6b15af9f58936cc7 SHA1 4428b572e6d0fd1d8cf5d2f3eb887d7ab90e151f SHA256 1c247e03418d6b90bcbc0da6c1abe6ac9cd5bacf9c3a2f3b6105376cf7b0eed8
 DIST shared-mime-info-0.60.tar.bz2 457377 RMD160 b7f781b248c2dd65e51575502fe427f964866e65 SHA1 5c071da5a6fca3116ac39a1b06c10d52d85e37ec SHA256 a0d0a948fbb8d0de576876791d53efd1c5e8dd782eb9e5369cafc06c3969de22
-EBUILD shared-mime-info-0.51.ebuild 1700 RMD160 30b2ad4b4071dcfaf44babb868cd9d70c4b8b44f SHA1 f3ed97095e559ccd8cb05d4ff6197a3af8a822bc SHA256 c27683c15738c1faf2db6ad0223474acc9be40f4213c985e5f318227e72c2ab0
+DIST shared-mime-info-0.70.tar.bz2 497575 RMD160 7511c56ef39144011b6e0ca78eb95436616c3dc6 SHA1 7c3b50f9c68a58760ec9cf020b24a05f98f3edb7 SHA256 0f9a3a6af30c43611db7b7873b91e96197ffc0c89b8e1ee16bc9f893e12c0ca0
 EBUILD shared-mime-info-0.60.ebuild 1861 RMD160 995f42ef733293f457130f78dff063be2bd7f6e9 SHA1 be9ab174c841970af56e37e8e025d207186f4b5a SHA256 f70c89e85933901dd11a18cbefbd6f472827bff7db92370d45949fc7e817880f
-MISC ChangeLog 19403 RMD160 540c3b4022202178b7110a71375556a7ff2b533d SHA1 4d2ae1d8fe1d00b547dab936efda913a8bf408be SHA256 94f495bbcfcb73bf3ac7b7bd0006ea0d9dce153d60fdbd9e1c1d70e88b98ed74
+EBUILD shared-mime-info-0.70.ebuild 1648 RMD160 0d7a770634ad22e9547c27cdbec5daf3eb6779de SHA1 3d5953eea8799d6d8f3fe6c6881c53364dadef45 SHA256 a828aab139882279ea502b9c67eefdb6ad8be4d70081bbead1b339808bf5e4e3
+MISC ChangeLog 19691 RMD160 161c94a86efd153d43ffb5ab61a857247fb5d189 SHA1 04e28b3e27c8a1949e5327dc040fdc7df8b74cc7 SHA256 1df984724960f96675b9d374105474fb032c27ffcea8f0a04a4929b4d33d5aa5
 MISC metadata.xml 234 RMD160 bd496dac30573bf707591b2b2ad497860e5aa029 SHA1 4641c1e70e35e944e7019aeae967deb1d2c28186 SHA256 3018e3b31ed690a57bfc14e35699dd20ea3b352fc28b918f699e6955b57a2d97
