@@ -1,7 +1,8 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/shared-mime-info/shared-mime-info-0.51.ebuild,v 1.8 2009/03/06 02:33:21 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/shared-mime-info/shared-mime-info-0.70.ebuild,v 1.2 2009/10/09 18:46:00 ssuominen Exp $
 
+EAPI=2
 inherit fdo-mime
 
 DESCRIPTION="The Shared MIME-info Database specification"
@@ -13,20 +14,21 @@ SLOT="0"
 KEYWORDS="~x86-interix ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris"
 IUSE=""
 
-RDEPEND=">=dev-libs/glib-2.16
+RDEPEND=">=dev-libs/glib-2.6
 	>=dev-libs/libxml2-2.4"
 DEPEND="${RDEPEND}
 	dev-util/pkgconfig
 	dev-util/intltool
 	sys-devel/gettext"
 
-src_compile() {
-	econf --disable-dependency-tracking --disable-update-mimedb
-	emake || die "emake failed."
+src_configure() {
+	econf \
+		--disable-dependency-tracking \
+		--disable-update-mimedb
 }
 
 src_install() {
-	emake DESTDIR="${D}" install || die "emake install failed."
+	emake DESTDIR="${D}" install || die
 	dodoc ChangeLog HACKING NEWS README
 	# in prefix, install an env.d entry such that prefix patch is used/added
 	dodir etc/env.d
@@ -36,10 +38,8 @@ src_install() {
 pkg_postinst() {
 	export XDG_DATA_DIRS="${EPREFIX}"/usr/share
 	fdo-mime_mime_database_update
-
-	# see bug #228885
 	elog
-	elog "The database format has changed between 0.30 and 0.40."
+	elog "The database format has changed between 0.60 and 0.70."
 	elog "You may need to update all your local databases and caches."
 	elog "To do so, please run the following commands:"
 	elog "(for each user) $ update-mime-database ~/.local/share/mime/"
