@@ -1,6 +1,16 @@
 # ChangeLog for x11-misc/shared-mime-info
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/shared-mime-info/ChangeLog,v 1.152 2009/07/23 22:51:53 eva Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/shared-mime-info/ChangeLog,v 1.154 2009/10/09 18:46:00 ssuominen Exp $
+
+  09 Oct 2009; Samuli Suominen <ssuominen@gentoo.org>
+  shared-mime-info-0.70.ebuild:
+  Restore database regeneration message wrt #288312.
+
+*shared-mime-info-0.70 (09 Oct 2009)
+
+  09 Oct 2009; Samuli Suominen <ssuominen@gentoo.org>
+  +shared-mime-info-0.70.ebuild:
+  Version bump.
 
   23 Jul 2009; Gilles Dartiguelongue <eva@gentoo.org>
   -shared-mime-info-0.51.ebuild:
